fix: format dates and fix alignment in order tmeplates
- Add DatePipe for date formatting in templates

- Add font-family to order-card button

- Set width to 100% on customer details div in order-data-popup-employee

--- a/src/app/components/reusable/order-card/order-card.css
+++ b/src/app/components/reusable/order-card/order-card.css
@@ -5,8 +5,8 @@ article {
     border: 1px solid rgba(255, 255, 255, 0.4);
     border-radius: 20px;
     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
-    
-    gap: 15px; 
+
+    gap: 15px;
     box-sizing: border-box;
     transition: all 0.3s ease;
 
@@ -25,10 +25,12 @@ div {
 }
 
 button {
-    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4)), 
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4)),
     url('/images/header3.png') center/cover no-repeat;
     color: #fcfcf9;
     width: 100%;
+    font-family: "Cinzel", serif;
+    font-weight: bold;
 }
 
 button:hover {
